Add start_time and end_time to Rooms
